[project]
name = "wiremock-mcp"
version = "0.1.0"
description = "Production-grade MCP server wrapping WireMock admin REST API for QA environment testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.scripts]
wiremock-mcp = "wiremock_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiremock_mcp"]
